<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:clipToPadding="false"
    android:padding="@dimen/dp_12"
    tools:context="widget.lottie.LottieHomeActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lottieHomeActivityMbLottieAnimationViewXml"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/lottieAnimationViewXml"
        android:textAppearance="?android:attr/textAppearanceInverse"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lottieHomeActivityMbLottieAnimationViewCode"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/lottieAnimationViewCode"
        android:textAppearance="?android:attr/textAppearanceInverse"
        app:layout_constraintTop_toBottomOf="@+id/lottieHomeActivityMbLottieAnimationViewXml" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lottieHomeActivityMbLottieComposition"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/lottieComposition"
        android:textAppearance="?android:attr/textAppearanceInverse"
        app:layout_constraintTop_toBottomOf="@+id/lottieHomeActivityMbLottieAnimationViewCode" />
</androidx.constraintlayout.widget.ConstraintLayout>