<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:clipToPadding="false"
    android:padding="@dimen/dp_12"
    tools:context="widget.banner.BannerHomeActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bannerHomeActivityMbBannerOne"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/bannerOne"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bannerHomeActivityMbBannerTwo"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/bannerTwo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bannerHomeActivityMbBannerOne" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bannerHomeActivityMbBannerThree"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/bannerThree"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bannerHomeActivityMbBannerTwo" />
</androidx.constraintlayout.widget.ConstraintLayout>