<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    tools:context="widget.module.textview.VerticalTextViewActivity">

    <LinearLayout
        android:id="@+id/verticalTextViewActivityLlTop"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verticalTextViewActivityMbFromLeftToRight"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_weight="1"
            android:text="@string/fromLeftToRight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verticalTextViewActivityMbFromRightToLeft"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_weight="1"
            android:text="@string/fromRightToLeft" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verticalTextViewActivityLlBottom"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verticalTextViewActivityLlTop">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verticalTextViewActivityMbShowUnderLine"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_weight="1"
            android:text="@string/showUnderLine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verticalTextViewActivityMbHideUnderLine"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_weight="1"
            android:text="@string/hideUnderLine" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/verticalTextViewActivityHsv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_12"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verticalTextViewActivityLlBottom">

        <com.chaos.widget.textview.align.VerticalTextView
            android:id="@+id/verticalTextViewActivityVtv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:textColor="@color/fontInput"
            android:textSize="@dimen/sp_14"
            app:verticalTextViewCharSpacingExtra="@dimen/dp_2"
            app:verticalTextViewLineSpacingExtra="@dimen/dp_10"
            app:verticalTextViewShowActionMenu="true"
            app:verticalTextViewTextHeightLightColor="@color/purple_500"
            app:verticalTextViewTextLeftToRight="true"
            app:verticalTextViewUnderLineColor="@color/purple_500"
            app:verticalTextViewUnderLineText="true"
            app:verticalTextViewUnderLineWidth="1.5"
            app:verticalTextViewUnderlineOffset="@dimen/dp_2" />
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
